feat(Parser): 로또 당첨 번호 생성 기능 구현
당첨 번호와 보너스 번호 입력을 DrawnLottoNumber로 변환하는 메서드 InputToDrawnLottoNumber를 구현함.